--- a/user-side/user/profile/main.css
+++ b/user-side/user/profile/main.css
@@ -226,3 +226,30 @@ div.scroll {
 .divSquare .divSquare1 {
     border: none;
 }
+
+/* img {
+    width: 100%;
+    height: 100%;
+    margin-top: 17px;
+} */
+
+.img-container {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 50px;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 49px;
+    margin-bottom: 49px;
+    margin-left: 10px;
+}
+
+.text {
+    font-size: 25px;
+    white-space: nowrap;
+
+}
