--- a/user-side/user/profile/main.css
+++ b/user-side/user/profile/main.css
@@ -243,8 +243,8 @@ div.scroll {
 img {
     max-width: 100%;
     max-height: 100%;
-    margin-top: 49px;
-    margin-bottom: 49px;
+    /* margin-top: 49px;
+    margin-bottom: 49px; */
     margin-left: 10px;
 }
 
