--- a/user-side/user/complaint/view/index.html
+++ b/user-side/user/complaint/view/index.html
@@ -10,7 +10,7 @@
     <!-- <link rel="stylesheet"
           href="./main.css"> -->
     <link rel="stylesheet"
-          href="./main.css">
+          href="./style.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -21,8 +21,7 @@
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
     <script type="module"
-            src="./script.js"
-            ;></script>
+            src="./script.js"></script>
 
 </head>
 
@@ -37,7 +36,7 @@
             <p class="logo"><b class="app-name">NTSF</b></p>
         </div>
         <p class="tagline">National Traffic Spot Fine System</p>
-        <a href="../../../index.html">
+        <a href="../../../dashboard/index.html">
             <button class="main">User Dashboard</button></a>
         <div class="clear"></div>
         <ul class="menu">
@@ -64,7 +63,9 @@
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
         <div class="panel">
-            <p class="profile-username">Avishi Ganepola</p>
+            <a href="../../profile/index.html">
+                <p class="profile-username">Avishi Ganepola</p>
+            </a>
         </div>
     </div>
     <!-- REPEATING -->
